2007-04-06  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_button), (paint_shadow),
	(paint_entry_shadow), (paint_scrollbar_trough),
	(paint_scale_trough), (paint_progress_bar), (draw_arrow),
	(draw_check), (draw_option), (draw_box_gap), (draw_extension),
	(draw_focus), (draw_slider): Remove the use of some fixed colours and shading

2007-04-01  Benjamin Berg  <benjamin@sipsolutions.net>

	Fix appears-as-list mode of GtkComboBox:

	* engines/support/widget-information.c:
	(ge_combo_box_is_using_list):
	* engines/support/widget-information.h:
	Fixed ge_combo_box_is_using_list and make it privat

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Add a workaround for GtkComboBox as it uses a GtkFrame instead of an
	entry.

2007-04-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
	(_clearlooks_draw_arrow), (clearlooks_draw_arrow):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_arrow), (clearlooks_style_realize):
	* engines/clearlooks/src/clearlooks_types.h:
	Rework the arrow drawing:
	- Always use clearlooks arrows (Fixes Bug #412647)
	- Use foreground color instead of text
	- New scalable arrow design, no fixed sizes anymore

2007-03-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_copy):
	Copy the style. This fixes a bug where the CLASSIC style is used
	instead of the user specified one. Reported by Andrea Cimitan.

2007-03-14  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	More tweaks to scrollbar shading from Andrea Cimitan

2007-03-12  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:
	Updated for 2.10.0 release

	* engines/clearlooks/src/clearlooks_draw.c: